welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:6: error: ')' expected but '}' found.
while (porteBiscuit()}
                     ^Balin:11: error: Unmatched closing brace '}' ignored here
	}
        ^Balin:12: error: eof expected but '}' found.
}
^