welcome.lessons.welcome.loopwhile.WhileMoria.scala.code
while (!estSurBiscuit){
recule()}
while (estSurBiscuit){
prendBiscuit()}
while (porteBiscuit()}
avancer()}

